# family_business

./: CMakeLists.txt
res/characters/: female_names.txt  last_names.txt  male_names.txt
src/: Application.cpp  Application.h  EventManager.cpp  EventManager.h  KeyboardEventListener.h  MessageListener.cpp  MessageListener.h  MessageManager.cpp  MessageManager.h  MessageParameters.cpp  MessageParameters.h  MouseEventListener.h  Point.cpp  Point.h  Process.cpp  Process.h  State.cpp  State.h  Variant.h  main.cpp
src/battle/: Battle.cpp  Battle.h  BattleCreature.cpp  BattleCreature.h  BattleCreatureAI.cpp  BattleCreatureAI.h  BattleMap.cpp  BattleMap.h  BattleState.cpp  BattleState.h  BattleTile.cpp  BattleTile.h  State.cpp  State.h
src/game/: AIManager.cpp  AIManager.h  AbstractAI.cpp  AbstractAI.h  Building.cpp  Building.h  BuildingManager.cpp  BuildingManager.h  Character.cpp  Character.h  CharacterAI.cpp  CharacterAI.h  CharacterManager.cpp  CharacterManager.h  Controller.h  Creature.cpp  Creature.h  CreatureManager.cpp  CreatureManager.h  Family.cpp  Family.h  FamilyManager.cpp  FamilyManager.h  Game.cpp  Game.h  GameMap.cpp  GameMap.h  Home.cpp  Home.h  House.cpp  House.h  HouseManager.cpp  HouseManager.h  Item.cpp  Item.h  LandscapeType.h  MainState.cpp  MainState.h  MapState.cpp  MapState.h  (+21 more)
src/view/: Animation.cpp  Animation.h  BattleView.cpp  BattleView.h  Drawable.cpp  Drawable.h  Image.cpp  Image.h  MainView.cpp  MainView.h  MapPresentation.cpp  MapPresentation.h  MapView.cpp  MapView.h  MenuView.cpp  MenuView.h  MovementAnimation.cpp  MovementAnimation.h  (+9 more)
(+58 files in other folders)
